# src/routes/api.ts
@@ -8,6 +8,7 @@ import publicEventRouter from './public-event.routes.js';
 import orderRouter from './order.routes.js';
 import paymentRouter from './payment.routes.js';
 import checkinRouter from './checkin.routes.js';
+import adminDashboardRouter from './admin-dashboard.routes.js';
 
 const router = Router();
 const protectedRouter = Router();
@@ -29,6 +30,7 @@ protectedRouter.use('/users', userRouter);
 protectedRouter.use('/orders', orderRouter);
 protectedRouter.use('/admin/events', eventRouter);
 protectedRouter.use('/admin/check-ins', checkinRouter);
+protectedRouter.use('/admin/dashboard', adminDashboardRouter);
 
 router.use(protectedRouter);
 
